--- a/ParkPass/css/sections/qr-scan.css
+++ b/ParkPass/css/sections/qr-scan.css
@@ -30,14 +30,22 @@
     top: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 /* Container */
 .qr-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 /* Content */
@@ -47,8 +55,13 @@
 }
 
 .qr-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 /* Title */
@@ -72,11 +85,8 @@
 .qr-scan {
     position: relative;
     margin-top: 30px;
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     max-width: calc(220 / var(--base-width) * 100vw);
 }
-
-/* Back btn
-.qr-back-btn {
-    
-} */
