--- a/ParkPass/css/sections/search.css
+++ b/ParkPass/css/sections/search.css
@@ -65,16 +65,26 @@
 /* No results */
 .search-box-no-results {
     padding: 16px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .search-box-no-results .icon {
     width: calc(23 / var(--base-width) * 100vw);
     height: calc(23 / var(--base-width) * 100vw);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     color: #fff;
     font-size: calc(16 / var(--base-width) * 100vw);
     font-weight: 900;
@@ -116,17 +126,32 @@
     display: block;
     border-radius: 4px;
     background: #5EE381;
-    animation-duration: .5s;
+    -webkit-animation-duration: .5s;
+            animation-duration: .5s;
 }
 
 .search-msg-mark-inner span:first-child {
     z-index: 2;
     top: 49%;
     left: 17.5%;
-    transform: rotate(50deg);
+    -webkit-transform: rotate(50deg);
+        -ms-transform: rotate(50deg);
+            transform: rotate(50deg);
     width: calc(13.85 / var(--base-width) * 100vw);
     height: calc(5.35 / var(--base-width) * 100vw);
-    animation-name: firstLine;
+    -webkit-animation-name: firstLine;
+            animation-name: firstLine;
+}
+
+@-webkit-keyframes firstLine {
+    from {
+        width: 0;
+        height: 0;
+    }
+    to {
+        width: calc(13.85 / var(--base-width) * 100vw);
+        height: calc(5.35 / var(--base-width) * 100vw);
+    }
 }
 
 @keyframes firstLine {
@@ -144,10 +169,24 @@
     z-index: 1;
     top: 43%;
     right: 14.5%;
-    transform: rotate(-50deg);
+    -webkit-transform: rotate(-50deg);
+        -ms-transform: rotate(-50deg);
+            transform: rotate(-50deg);
     width: calc(18.41 / var(--base-width) * 100vw);
     height: calc(5.35 / var(--base-width) * 100vw);
-    animation-name: secondLine;
+    -webkit-animation-name: secondLine;
+            animation-name: secondLine;
+}
+
+@-webkit-keyframes secondLine {
+    from {
+        width: 0;
+        height: 0;
+    }
+    to {
+        width: calc(18.41 / var(--base-width) * 100vw);
+        height: calc(5.35 / var(--base-width) * 100vw);
+    }
 }
 
 @keyframes secondLine {
