--- a/ParkPass/css/sections/header.css
+++ b/ParkPass/css/sections/header.css
@@ -1,20 +1,31 @@
 /** Panel */
 .header .panel {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 6px; 
     width: 100%;
     background: #fff;
     border-radius: 22px;
-    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .15);
+    -webkit-box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .15);
+            box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .15);
 }
 
 /* User */
 .header .panel-user {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: calc(28 / var(--base-width) * 100vw);
     height: calc(28 / var(--base-width) * 100vw);
     border: 1px solid var(--gold);
@@ -38,7 +49,9 @@
     position: absolute;
     right: 17px;
     top: 50%;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
     max-width: calc(7 / var(--base-width) * 100vw);
 }
 
