--- a/ParkPass/css/sections/payment.css
+++ b/ParkPass/css/sections/payment.css
@@ -1,4 +1,135 @@
-/** Payment success */
+/*! Payment */
+/* Button */
+.payment-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+}
+
+#another-payment-btn span {
+    color: var(--accent);
+}
+
+.payment-btn + .payment-btn {
+    margin-top: 20px;
+}
+
+.payment-btn img {
+    max-width: 32px;
+}
+
+/* Card */
+.payment-card {
+    position: relative;
+    margin-top: 20px;
+    width: 100%;
+    padding: 16px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 1px solid #E9E9E9;
+    border-radius: 10px;
+    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, .25);
+}
+
+.payment-card-field, .payment-card-field span {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+}
+
+.payment-card-field span {
+    color: var(--accent);
+    font-size: 12px;
+}
+
+.payment-card-field input {
+    margin-top: 8px;
+    padding-bottom: 5px;
+    background: transparent;
+    border-bottom: 1px solid var(--accent);
+}
+
+.payment-card-btn {
+    margin-top: 25px;
+}
+
+.payment-card-logo {
+    position: absolute;
+    right: 16px;
+    top: 16px;
+    max-width: 38px;
+}
+
+/*! SBP */
+/* Search */
+.sbp-search {
+    position: relative;
+    margin-top: 30px;
+    width: 100%;
+}
+
+.sbp-search input {
+    width: 100%;
+    padding: 10px 32px;
+    font-size: 12px;
+    background: #F0F0F0;
+    border-radius: 29px;
+}
+
+.sbp-search svg {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+}
+
+/* Box */
+.sbp-box {
+    margin-top: 20px;
+}
+
+.sbp-box-title {
+    color: #4F4D4D;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.sbp-box, .sbp-box-lists, .sbp-box-lists li, .sbp-box-lists a {
+    width: 100%;
+}
+
+.sbp-box-lists li {
+    margin-top: 20px;
+}
+
+.sbp-box-lists a {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sbp-box-lists .icon {
+    width: 38px;
+}
+
+.sbp-box-lists .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: calc(100% - 60px);
+}
+
+.sbp-box-lists .content h5 {
+    font-size: 18px;
+}
+
+.sbp-box-lists .content .arrow {
+    width: 5px;
+}
+
+/*! Message */
 .payment-success-msg img {
     max-width: calc(211 / var(--base-width) * 100vw);
 }
