--- a/ParkPass/css/components.css
+++ b/ParkPass/css/components.css
@@ -104,12 +104,15 @@
 }
 
 .modal-inner {
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
     transform: translateY(100%);
     display: flex;
     align-items: center;
     flex-direction: column;
     width: 100%;
+    max-width: 510px;
     height: 100%;
     padding: 50px 25px;
     background: #fff;
@@ -269,6 +272,10 @@
 
 .text-center {
     text-align: center;
+}
+
+.d-none {
+    display: none !important;
 }
 
 /* Flexbox */
