--- a/M-Auto/scss/sections/components.scss
+++ b/M-Auto/scss/sections/components.scss
@@ -39,7 +39,7 @@
     z-index: 1;
     min-width: vw(500);
     display: block;
-    background-image: url('/img/btn-bg.svg');
+    background-image: url('../img/btn-bg.svg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
