--- a/M-Auto/scss/sections/sections.scss
+++ b/M-Auto/scss/sections/sections.scss
@@ -481,7 +481,7 @@
             transition: all .3s ease;
 
             svg {
-                max-width: vw(16.6);
+                width: vw(16.6);
             }
         }
 
@@ -577,6 +577,7 @@
     }
 } 
 
+// Magnific popup
 .mfp-content {
     width: auto !important;
     max-width: 90%;
@@ -605,6 +606,33 @@
     }
 }
 
+.mfp-arrow {
+    transform: scale(.9);
+    opacity: 1;
+}
+
+.mfp-arrow-left {
+    &:before {
+        border-right: 27px solid #fff;
+        opacity: 1;
+    }
+
+    &:after {
+        border-right: 17px solid #1FFFA5 ;
+    }
+}
+
+.mfp-arrow-right {
+    &:before {
+        border-left: 27px solid #fff;
+        opacity: 1;
+    }
+
+    &:after {
+        border-left: 17px solid #1FFFA5 ;
+    }
+}
+
 .mfp-zoom-out-cur {
     cursor: pointer !important;
 }
@@ -612,5 +640,20 @@
 .mfp-gallery {
     .mfp-close {
         display: none;
+    }
+
+    figure {
+        position: relative;
+        overflow:hidden;
+        @include box(60vw, 92vh);
+
+        img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform:translate(-50%,-50%);
+            @include box(100%);
+            object-fit:cover;
+        }
     }
 }
